<resources>
    <string name="app_name">MonstersApp3Final</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="scariness">scariness</string>
    <string name="add_a_short_description">add a short description</string>
    <string name="type_your_monster_s_name">Type your monster\'s name</string>

</resources>