<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".monster.add.AddMonsterScrollingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="360dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.97" />

        <EditText
            android:id="@+id/addMonsterNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/type_your_monster_s_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/addMonsterDescriptionEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/add_a_short_description"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/addMonsterNameEditText" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="150dp"
            android:layout_height="27dp"
            android:text="@string/scariness"
            app:layout_constraintEnd_toStartOf="@+id/addMonsterScarinessSeekBar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/addMonsterScarinessSeekBar" />

        <SeekBar
            android:id="@+id/addMonsterScarinessSeekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="146dp"
            android:layout_height="27dp"
            android:layout_marginTop="32dp"
            android:max="5"
            android:progress="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/addMonsterDescriptionEditText" />

        <Button
            android:id="@+id/addMonsterCancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="@string/cancel"
            app:icon="@drawable/baseline_cancel_black_18dp"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toStartOf="@+id/addMonsterAddButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/addMonsterAddButton" />

        <Button
            android:id="@+id/addMonsterAddButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="64dp"
            android:gravity="center"
            android:text="@string/add"
            app:icon="@drawable/baseline_check_circle_outline_black_18dp"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/addMonsterCancelButton"
            app:layout_constraintTop_toBottomOf="@+id/addMonsterScarinessSeekBar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>